--- a/.github/workflows/continuos-integration.yml
+++ b/.github/workflows/continuos-integration.yml
@@ -28,4 +28,11 @@ jobs:
     - name: Docker Compose Build
       working-directory: ./02-app
       run: docker compose build
-           
+      
+    - name: Push to Docker Hub Container Registry
+      run: 
+        docker tag docker_from_zero_to_mastery_java:latest ${{ secrets.DOCKER_USERNAME }}/docker_from_zero_to_mastery_java:latest
+        docker tag docker_from_zero_to_mastery_java:latest ${{ secrets.DOCKER_USERNAME }}/docker_from_zero_to_mastery_java:${{ github.run_id }}
+        
+        docker push ${{ secrets.DOCKER_USERNAME }}/docker_from_zero_to_mastery_java:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/docker_from_zero_to_mastery_java:${{ github.run_id }}
