--- a/.github/workflows/continuos-integration.yml
+++ b/.github/workflows/continuos-integration.yml
@@ -2,7 +2,7 @@ name: Continuos Integration with Github, Github Actions, Docker Hub
 
 on:
   push:
-    branches: main
+    branches: master
 
 jobs:
   build:
